# mips-as

./: CMakeLists.txt  test.asm
include/mips-as/: prelude.h
src/: assembler.c  assembler.h  buffer.c  buffer.h  main.c
src/parse/: parser.c  parser.h  token.h  tokenizer.c  tokenizer.h
